<resources>
    <string name="app_name">EZ Place</string>

    <!-- IntroActivity-->
    <string name="lets_get_started_text">Let\'s get started.</string>
    <string name="intro_text_description">Make the placement process transparent and easy with EZ Place.</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_as_student">SIGN UP AS STUDENT</string>
    <string name="sign_up_as_tpo">SIGN UP AS TPO</string>

    <!-- SignUpActivity -->
    <string name="sign_up_description_text">Enter your name, email id and password to register with us.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_first_name">Please enter first name.</string>
    <string name="enter_last_name">Please enter last name.</string>
    <string name="enter_email">Please enter your email id.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_college_name">Please enter your college name.</string>
    <string name="sign_up">Sign Up</string>

    <!-- Progress Dialog-->
    <string name="please_wait">Please Wait&#8230;</string>

    <!-- SignInActivity -->
    <string name="sign_in_description_text">Enter your email id and password to sign in.</string>

    <!-- Update profile activity -->
    <string name="update_profile">Update Profile</string>
    <string name="update">UPDATE</string>
    <string name="college_name">College Name</string>
    <string name="college_roll_number">College Roll Number</string>
    <string name="college_code">College Code</string>
    <string name="branch">Branch Code</string>
    <string name="cgpa">CGPA</string>
    <string name="select_branch">Select branch</string>

    <!-- MainActivity -->
    <string name="upcoming">Upcoming</string>
    <string name="ongoing">Ongoing</string>
    <string name="previous">Previous</string>
    <string name="main_activity_title">Companies</string>
    <string name="no_companies_available">No companies under this section.</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <!-- Alert Dialog -->
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_alert_text">You will be signed out.</string>

    <!-- NewCompanyDetails Activity-->
    <string name="new_company">New Company</string>
    <string name="company_name">Company Name</string>
    <string name="cgpa_cut_off">CGPA Cut Off</string>
    <string name="branches_allowed">Branches Allowed :</string>
    <string name="ctc_details">CTC Details :</string>
    <string name="job_profile">Job profile</string>
    <string name="location">Location</string>
    <string name="deadline_to_apply">Deadline to apply</string>
    <string name="submit">Submit</string>
    <string name="computer_science">Computer Science</string>
    <string name="electronics_and_communication">Electronics and Communication</string>
    <string name="electrical">Electrical</string>
    <string name="instrumentation_and_control">Instrumentation and Control</string>
    <string name="mechanical">Mechanical</string>
    <string name="textile">Textile</string>
    <string name="add_new_company">Add new company</string>
    <string name="enter_company_name">Please enter the company name</string>
    <string name="enter_cgpa_cut_off">Please enter CGPA Cut off</string>
    <string name="enter_at_least_one_branch">Please enter at least one branch</string>
    <string name="enter_company_location">Please enter company location</string>
    <string name="enter_deadline_to_apply">Please enter deadline to apply</string>
    <string name="enter_backlogs_details">Please enter backlogs details</string>
    <string name="enter_ctc_details">Please enter CTC details</string>
    <string name="enter_job_profile">Please enter job profiles.</string>
    <string name="backlogs">Backlogs</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not allowed</string>
    <string name="company_is_added">Company added successfully</string>
    <string name="default_notification_channel_id">EZ Place notification channel Id</string>

    <string name="tap_to_view_more">Tap to view more</string>
    <string name="select_college_name">Please select your college name.</string>
    <string name="select_you_branch">Please select your branch.</string>
    <string name="enter_cgpa">Please enter your cgpa.</string>
    <string name="enter_roll_number">Please enter your roll number.</string>
    <string name="number_of_backlogs">Number of backlogs</string>
    <string name="enter_backlogs">Please enter number of backlogs till date.</string>
    <string name="select_college">Select your College name</string>
    <string name="add_new_pr">Add a PR</string>
    <string name="add_pr">Add Placement Representative</string>
    <string name="add">ADD</string>
    <string name="disable_update_profile_button_fab">Disable update profile button</string>
    <string name="disable_update_profile_button">Update profile button for all the students will be disabled.</string>
    <string name="enable_update_profile_button">Update profile button for all the students will be enabled.</string>
    <string name="enable_update_profile_button_fab">Enable  update profile button</string>

    <!--    Add Round activity -->
    <string name="rounds_details">Round details</string>
    <string name="about_company">About company</string>
    <string name="add_round">Add new round</string>
    <string name="round_name">Round name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="enter_round_name">Please add round name</string>
    <string name="enter_round_date">Please enter round date</string>
    <string name="enter_round_time">Please enter round time</string>
    <string name="enter_round_venue">Please enter venue of round</string>

    <!-- Declare results activity -->
    <string name="cleared">Cleared</string>
    <string name="declare_results">Declare results</string>
    <string name="view_results">View results</string>
    <string name="no_rounds_added">No rounds have been added yet</string>
    <string name="results">Results</string>
    <string name="roll_number">ROLL NUMBER</string>
    <string name="name">NAME</string>
    <string name="declare_results_text_view">Tap a row to select it.</string>
    <string name="no_students_selected_from_previous_round">No student cleared this round</string>

    <string name="valid_cgpa">CGPA should be between 1 and 10</string>
    <string name="passwords_not_matching">Passwords do not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="wrong_email">Email Id is ill-formatted</string>
    <string name="swicth_to_student">Switch to Student account</string>
    <string name="switch_to_pr">Switch to PR account</string>
    <string name="is_this_the_last_round">Is this the final round ?</string>
    <string name="placement_records">Placement records</string>
    <string name="refresh">Refresh</string>
    <string name="placed_students">Placed students</string>
    <string name="already_placed">As you are already placed, you have not moved further in this company\'s process.</string>
    <string name="you_have_been_placed_here">You have been placed here.</string>
    <string name="rounds_over">rounds over</string>
    <string name="important_fields">All fields other than marked as optional are mandatory.</string>
    <string name="last_name_optional">Last name (optional)</string>
    <string name="location_optional">Location (optional)</string>
    <string name="click_to_see_fab">Click to see different options.</string>

</resources>