<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/layout_margin_top_and_bottom"
    android:layout_marginStart="@dimen/layout_margin_start_and_end"
    android:layout_marginEnd="@dimen/layout_margin_start_and_end"
    android:layout_marginBottom="@dimen/layout_margin_top_and_bottom"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/app_name"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        android:textSize="60sp"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size"
        android:textStyle="italic"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_school"
        android:layout_marginTop="@dimen/intro_image_margin_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lets_get_started_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/lets_get_started_text_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_sign_up_student_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button_rounded_green"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_up_as_student"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_sign_up_tpo_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_up_as_tpo"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/dark_blue"/>
    </LinearLayout>
</LinearLayout>