<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DeclareResultsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_declare_results"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue">

        <TextView
            android:id="@+id/tv_title_declare_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/declare_results"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/table_declare_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="@dimen/table_margin"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableRow>

                <TextView
                    android:id="@+id/tv_roll_table_heading_declare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/table_cell_background"
                    android:backgroundTint="@color/light_blue"
                    android:padding="5dp"
                    android:text="@string/roll_number" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:backgroundTint="@color/light_blue"
                    android:background="@drawable/table_cell_background"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/name" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>